# osg2citygml

./: .gitignore  .gitmodules  CMakeLists.txt  MainWindow.cpp  MainWindow.h  OSGWidget.cpp  OSGWidget.h  README.md
CMakeModules/: FindXercesC.cmake
forms/: mainwindow.ui
include/: AppCameraManipulator.h  CityGML.h  CityGMLHelper.h  CityGMLWriter.h  GML.h  GMLHelper.h  GeometryHandler.h  MainWindow.h  OSGConv.h  OSGHelpers.h  OSGWidget.h  RayCastHelpers.h  ReaderWriterCityGML.h  SchemaValidator.h  SelectionHandler.h  UIHelper.h
libcitygml/: CMakeLists.txt
libcitygml/CMakeModules/: FindXerces.cmake
libcitygml/sources/: CMakeLists.txt
src/: AppCameraManipulator.cpp  CityGMLWriter.cpp  MainWindow.cpp  MainWindow.h  OSGConv.cpp  OSGHelpers.h  OSGWidget.cpp  OSGWidget.h  RayCastHelpers.h  ReaderWriterCityGML.cpp  UIHelperSingleton.cpp  osghelpers.h
